--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.3.0",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue3-star-ratings": "^3.0.5"
   },
   "devDependencies": {
     "@capacitor/cli": "6.0.0",
