--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0",
+    "vue3-apexcharts": "^1.8.0",
     "vue3-star-ratings": "^3.0.5"
   },
   "devDependencies": {
